github pages 404 for images fix

--- a/bathrooms.html
+++ b/bathrooms.html
@@ -183,22 +183,22 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="img/bathrooms/DP/DP001.jpg">
+                <img src="img/bathrooms-page/DP/DP001.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms/DP/DP002.jpg">
+                <img src="img/bathrooms-page/DP/DP002.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms/DP/DP003.jpg">
+                <img src="img/bathrooms-page/DP/DP003.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms/DP/DP004.jpg">
+                <img src="img/bathrooms-page/DP/DP004.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms/DP/DP005.jpg">
+                <img src="img/bathrooms-page/DP/DP005.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms/DP/DP006.jpg">
+                <img src="img/bathrooms-page/DP/DP006.JPG">
             </div>
         </div>
         <!-- Carousel controls -->
@@ -243,22 +243,22 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="img/bathrooms/HC/HC001.jpg">
+                <img src="img/bathrooms-page/HC/HC001.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms/HC/HC002.jpg">
+                <img src="img/bathrooms-page/HC/HC002.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms/HC/HC003.jpg">
+                <img src="img/bathrooms-page/HC/HC003.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms/HC/HC004.jpg">
+                <img src="img/bathrooms-page/HC/HC004.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms/HC/HC005.jpg">
+                <img src="img/bathrooms-page/HC/HC005.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms/HC/HC006.jpg">
+                <img src="img/bathrooms-page/HC/HC006.JPG">
             </div>
         </div>
         <!-- Carousel controls -->
@@ -302,19 +302,19 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="img/bathrooms-page/KR/KR001.jpg">
+                <img src="img/bathrooms-page/KR/KR001.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/KR/KR002.jpg">
+                <img src="img/bathrooms-page/KR/KR002.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/KR/KR003.jpg">
+                <img src="img/bathrooms-page/KR/KR003.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/KR/KR004.jpg">
+                <img src="img/bathrooms-page/KR/KR004.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/KR/KR005.jpg">
+                <img src="img/bathrooms-page/KR/KR005.JPG">
             </div>
         </div>
         <!-- Carousel controls -->
@@ -360,22 +360,22 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="img/bathrooms-page/SM/SM001.jpg">
+                <img src="img/bathrooms-page/SM/SM001.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/SM/SM002.jpg">
+                <img src="img/bathrooms-page/SM/SM002.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/SM/SM003.jpg">
+                <img src="img/bathrooms-page/SM/SM003.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/SM/SM004.jpg">
+                <img src="img/bathrooms-page/SM/SM004.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/SM/SM005.jpg">
+                <img src="img/bathrooms-page/SM/SM005.JPG">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/SM/SM006.jpg">
+                <img src="img/bathrooms-page/SM/SM006.JPG">
             </div>
         </div>
         <!-- Carousel controls -->
