--- a/kitchens.html
+++ b/kitchens.html
@@ -200,34 +200,34 @@
                 <!-- Wrapper for carousel items -->
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img src="img/kitchens-page/SW/SW001.jpg">
+                        <img src="img/kitchens-page/SW/SW001.JPG">
                     </div>
                     <div class="item">
-                        <img src="img/kitchens-page/SW/SW002.jpg">
+                        <img src="img/kitchens-page/SW/SW002.JPG">
                     </div>
                     <div class="item">
-                        <img src="img/kitchens-page/SW/SW003.jpg">
+                        <img src="img/kitchens-page/SW/SW003.JPG">
                     </div>
                     <div class="item">
-                        <img src="img/kitchens-page/SW/SW004.jpg">
+                        <img src="img/kitchens-page/SW/SW004.JPG">
                     </div>
                     <div class="item">
-                        <img src="img/kitchens-page/SW/SW005.jpg">
+                        <img src="img/kitchens-page/SW/SW005.JPG">
                     </div>
                     <div class="item">
-                        <img src="img/kitchens-page/SW/SW006.jpg">
+                        <img src="img/kitchens-page/SW/SW006.JPG">
                     </div>
                     <div class="item">
-                        <img src="img/kitchens-page/SW/SW007.jpg">
+                        <img src="img/kitchens-page/SW/SW007.JPG">
                     </div>
                     <div class="item">
-                        <img src="img/kitchens-page/SW/SW008.jpg">
+                        <img src="img/kitchens-page/SW/SW008.JPG">
                     </div>
                     <div class="item">
-                        <img src="img/kitchens-page/SW/SW009.jpg">
+                        <img src="img/kitchens-page/SW/SW009.JPG">
                     </div>
                     <div class="item">
-                        <img src="img/kitchens-page/SW/SW010.jpg">
+                        <img src="img/kitchens-page/SW/SW010.JPG">
                     </div>
                 </div>
                 <!-- Carousel controls -->
@@ -273,25 +273,25 @@
             <!-- Wrapper for carousel items -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="img/kitchens-page/jr/jr001.jpg">
+                    <img src="img/kitchens-page/jr/jr001.JPG">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/jr/jr002.jpg">
+                    <img src="img/kitchens-page/jr/jr002.JPG">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/jr/jr003.jpg">
+                    <img src="img/kitchens-page/jr/jr003.JPG">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/jr/jr004.jpg">
+                    <img src="img/kitchens-page/jr/jr004.JPG">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/jr/jr005.jpg">
+                    <img src="img/kitchens-page/jr/jr005.JPG">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/jr/jr006.jpg">
+                    <img src="img/kitchens-page/jr/jr006.JPG">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/jr/jr007.jpg">
+                    <img src="img/kitchens-page/jr/jr007.JPG">
                 </div>
             </div>
             <!-- Carousel controls -->
@@ -334,22 +334,22 @@
             <!-- Wrapper for carousel items -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="img/kitchens-page/mh/mh001.jpg">
+                    <img src="img/kitchens-page/mh/mh001.JPG">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/mh/mh002.jpg">
+                    <img src="img/kitchens-page/mh/mh002.JPG">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/mh/mh003.jpg">
+                    <img src="img/kitchens-page/mh/mh003.JPG">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/mh/mh004.jpg">
+                    <img src="img/kitchens-page/mh/mh004.JPG">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/mh/mh005.jpg">
+                    <img src="img/kitchens-page/mh/mh005.JPG">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/mh/mh006.jpg">
+                    <img src="img/kitchens-page/mh/mh006.JPG">
                 </div>
             </div>
             <!-- Carousel controls -->
