github pages 404 for images fix

--- a/kitchens.html
+++ b/kitchens.html
@@ -273,25 +273,25 @@
             <!-- Wrapper for carousel items -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="img/kitchens-page/jr/jr001.JPG">
+                    <img src="img/kitchens-page/jr/jr001.jpg">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/jr/jr002.JPG">
+                    <img src="img/kitchens-page/jr/jr002.jpg">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/jr/jr003.JPG">
+                    <img src="img/kitchens-page/jr/jr003.jpg">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/jr/jr004.JPG">
+                    <img src="img/kitchens-page/jr/jr004.jpg">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/jr/jr005.JPG">
+                    <img src="img/kitchens-page/jr/jr005.jpg">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/jr/jr006.JPG">
+                    <img src="img/kitchens-page/jr/jr006.jpg">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/jr/jr007.JPG">
+                    <img src="img/kitchens-page/jr/jr007.jpg">
                 </div>
             </div>
             <!-- Carousel controls -->
