--- a/bathrooms.html
+++ b/bathrooms.html
@@ -147,7 +147,7 @@
 </div>
 
 <div class="row">
-    <div class="col-md-offset-9 col-md-3 text-right">
+    <div class="col-md-offset-9 col-md-3 text-right" style="display: none">
         <button class="viewphotos full-gallery">VIEW BATHROOM GALLERY</button> 
     </div>
 </div>
