galleries intial work

--- a/kitchens.html
+++ b/kitchens.html
@@ -153,11 +153,15 @@
                 </blockquote>
             </div>
 
-            <div class="row" style="display: none;">
+            <div class="row">
                 <div class="col-md-offset-9 col-md-3 text-right">
-                    <button class="viewphotos full-gallery">VIEW KITCHEN GALLERY</button> 
+                    <a class="viewphotos full-gallery" href="kitchens-gallery.html">VIEW KITCHEN GALLERY</a> 
                 </div>
             </div>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
 
         </div>
 
