--- a/bathrooms.html
+++ b/bathrooms.html
@@ -145,11 +145,15 @@
 </blockquote>
 </div>
 
-<div class="row">
-    <div class="col-md-offset-9 col-md-3 text-right" style="display: none">
-        <button class="viewphotos full-gallery">VIEW BATHROOM GALLERY</button> 
-    </div>
-</div>
+            <div class="row">
+                <div class="col-md-offset-9 col-md-3 text-right">
+                    <a class="viewphotos full-gallery" href="bathrooms-gallery.html">VIEW BATHROOM GALLERY</a> 
+                </div>
+            </div>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
 
 </div>
 
