--- a/bathrooms-gallery.html
+++ b/bathrooms-gallery.html
@@ -79,7 +79,7 @@
 
            <div class="row">
             <div class="col-md-4">
-               <img src="img/bathrooms-page/HC/HC004.jpg" width="90%">
+               <img src="img/bathrooms-page/HC/HC004.JPG" width="90%">
            </div>
            <div class="col-md-4">
                <img src="img/bathrooms-page/MFE/MFE003.JPG" width="90%">
