--- a/kitchens-gallery.html
+++ b/kitchens-gallery.html
@@ -66,34 +66,44 @@
 
             <div class="row">
                 <div class="col-md-4">
-                 <img src="img/kitchens-page/SW/SW006.JPG" width="90%">
+                    <a href="#" data-toggle="modal" data-target="#sw-modal">
+                     <img src="img/kitchens-page/SW/SW006.JPG" width="90%">
+                 </a>
              </div>
              <div class="col-md-4">
+                <a href="#" data-toggle="modal" data-target="#mfk-modal">
                  <img src="img/kitchens-page/MFK/MFK004.JPG" width="90%">
-             </div>
-             <div class="col-md-4">
-                 <img src="img/kitchens-page/MH/MH001.JPG" width="90%">
-             </div>
-         </div>
-
-
-         <div class="row">
-            <div class="col-md-4">
-             <img src="img/kitchens-page/JR/JR005.jpg" width="90%">
+             </a>
          </div>
          <div class="col-md-4">
-             <img src="img/kitchens-page/RBK/RBK003.JPG" width="90%">
-         </div>
-         <div class="col-md-4">
-         </div>
+            <a href="#" data-toggle="modal" data-target="#mh-modal">
+             <img src="img/kitchens-page/MH/MH001.JPG" width="90%">
+         </a>
      </div>
-     <br/>
-     <br/>
-     <br/>
-     <!--Content Ends -->
-     <footer class="text-right">
-        AJIVES Limited. Registered in England. Company No. 8647133
-    </footer>
+ </div>
+
+
+ <div class="row">
+    <div class="col-md-4">
+    <a href="#" data-toggle="modal" data-target="#jr-modal">
+         <img src="img/kitchens-page/JR/JR005.jpg" width="90%">
+     </a>
+ </div>
+ <div class="col-md-4">
+    <a href="#" data-toggle="modal" data-target="#rbk-modal">
+     <img src="img/kitchens-page/RBK/RBK003.JPG" width="90%">
+ </a>
+</div>
+<div class="col-md-4">
+</div>
+</div>
+<br/>
+<br/>
+<br/>
+<!--Content Ends -->
+<footer class="text-right">
+    AJIVES Limited. Registered in England. Company No. 8647133
+</footer>
 </div>
 
 
@@ -286,6 +296,124 @@
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
             <a class="carousel-control right" href="#mh" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+            </a>
+        </div>
+        <!--Carousel End-->
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    </div>
+</div><!-- /.modal-content -->
+</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+
+<!--Modal 4 MFK Modal-->
+<div class="modal fade" id="mfk-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title"></h4>
+    </div>
+    <div class="modal-body">
+        <!--Carousel Start-->
+        <div id="mfk" class="carousel slide" data-interval="false" data-ride="carousel"  aria-hidden="true">
+            <!-- Carousel indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#mfk" data-slide-to="0" class="active"></li>
+                <li data-target="#mfk" data-slide-to="1"></li>
+                <li data-target="#mfk" data-slide-to="2"></li>
+                <li data-target="#mfk" data-slide-to="3"></li>
+                <li data-target="#mfk" data-slide-to="4"></li>
+                <li data-target="#mfk" data-slide-to="5"></li>
+                <li data-target="#mfk" data-slide-to="6"></li>
+            </ol>
+            <!-- Wrapper for carousel items -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="img/kitchens-page/MFK/MFK001.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/MFK/MFK002.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/MFK/MFK003.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/MFK/MFK004.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/MFK/MFK005.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/MFK/MFK006.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/MFK/MFK007.jpg">
+                </div>
+            </div>
+            <!-- Carousel controls -->
+            <a class="carousel-control left" href="#mfk" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <a class="carousel-control right" href="#mfk" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+            </a>
+        </div>
+        <!--Carousel End-->
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    </div>
+</div><!-- /.modal-content -->
+</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+
+<!--Modal 4 RBK Modal-->
+<div class="modal fade" id="rbk-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title"></h4>
+    </div>
+    <div class="modal-body">
+        <!--Carousel Start-->
+        <div id="rbk" class="carousel slide" data-interval="false" data-ride="carousel"  aria-hidden="true">
+            <!-- Carousel indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#rbk" data-slide-to="0" class="active"></li>
+                <li data-target="#rbk" data-slide-to="1"></li>
+                <li data-target="#rbk" data-slide-to="2"></li>
+                <li data-target="#rbk" data-slide-to="3"></li>
+                <li data-target="#rbk" data-slide-to="4"></li>
+            </ol>
+            <!-- Wrapper for carousel items -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="img/kitchens-page/RBK/RBK001.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/RBK/RBK002.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/RBK/RBK003.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/RBK/RBK004.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/RBK/RBK005.jpg">
+                </div>
+            </div>
+            <!-- Carousel controls -->
+            <a class="carousel-control left" href="#rbk" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <a class="carousel-control right" href="#rbk" data-slide="next">
                 <span class="glyphicon glyphicon-chevron-right"></span>
             </a>
         </div>
