--- a/bathrooms-gallery.html
+++ b/bathrooms-gallery.html
@@ -32,7 +32,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <p class="pull-left text-left contact-info">
-                            <span class="contact-info-tel">Tel: 07770 701323</span><br />
+                            Tel: 07770 701323<br />
                             Email: info@ajives-renovation.co.uk<br />
                             Email: ivesplumbing@live.co.uk
                         </p>
