iphone tel color fix

--- a/bathrooms-gallery.html
+++ b/bathrooms-gallery.html
@@ -6,6 +6,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/bootstrap-modal-carousel/dist/css/bootstrap-modal-carousel.min.css">
@@ -32,10 +33,9 @@
                 <div class="row">
                     <div class="col-md-4">
                         <p class="pull-left text-left contact-info">
-                            Tel: 07770 701323<br />
+                            <span class="contact-info-tel">Tel: 07770 701323</span><br />
                             Email: info@ajives-renovation.co.uk<br />
                             Email: ivesplumbing@live.co.uk
-                            07770 701323
                         </p>
                     </div>
                     <div class="col-md-4">
