iphone tel color fix

--- a/kitchens-gallery.html
+++ b/kitchens-gallery.html
@@ -6,6 +6,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <meta name="format-detection" content="telephone=no">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/bootstrap-modal-carousel/dist/css/bootstrap-modal-carousel.min.css">
