--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
             </div>
         </div>
-        <div class="container">
 
+        <div class="container">
         <!--Nav ref http://medialoot.com/blog/how-to-create-a-responsive-navigation-menu-using-only-css/-->
              <nav>
                 <label for="show-menu" class="show-menu">Show Menu</label>
@@ -90,7 +90,7 @@
         </div>
         <div class="col-md-8">
             <!--Carousel Start-->
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="2000">
                 <!-- Carousel indicators -->
                 <ol class="carousel-indicators">
                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
