--- a/kitchens-gallery.html
+++ b/kitchens-gallery.html
@@ -73,12 +73,12 @@
              </div>
              <div class="col-md-4">
                 <a href="#" data-toggle="modal" data-target="#mfk-modal">
-                 <img src="img/kitchens-page/MFK/MFK004.JPG" width="90%">
+                 <img src="img/kitchens-page/MFK/MFK004.jpg" width="90%">
              </a>
          </div>
          <div class="col-md-4">
             <a href="#" data-toggle="modal" data-target="#mh-modal">
-             <img src="img/kitchens-page/MH/MH001.JPG" width="90%">
+             <img src="img/kitchens-page/MH/MH001.jpg" width="90%">
          </a>
      </div>
  </div>
@@ -92,7 +92,7 @@
  </div>
  <div class="col-md-4">
     <a href="#" data-toggle="modal" data-target="#rbk-modal">
-     <img src="img/kitchens-page/RBK/RBK003.JPG" width="90%">
+     <img src="img/kitchens-page/RBK/RBK003.jpg" width="90%">
  </a>
 </div>
 <div class="col-md-4">
