--- a/kitchens-gallery.html
+++ b/kitchens-gallery.html
@@ -274,22 +274,22 @@
             <!-- Wrapper for carousel items -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="img/kitchens-page/MH/MH001.JPG">
+                    <img src="img/kitchens-page/MH/MH001.jpg">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/MH/MH002.JPG">
+                    <img src="img/kitchens-page/MH/MH002.jpg">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/MH/MH003.JPG">
+                    <img src="img/kitchens-page/MH/MH003.jpg">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/MH/MH004.JPG">
+                    <img src="img/kitchens-page/MH/MH004.jpg">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/MH/MH005.JPG">
+                    <img src="img/kitchens-page/MH/MH005.jpg">
                 </div>
                 <div class="item">
-                    <img src="img/kitchens-page/MH/MH006.JPG">
+                    <img src="img/kitchens-page/MH/MH006.jpg">
                 </div>
             </div>
             <!-- Carousel controls -->
